pushed fix for grammer mistakes and alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,10 @@ body {
   color: #ffffff !important;
 }
 
+.sidenav-bg {
+  background-color: #222 !important;
+}
+
 .hero-image {
   width: 100%;
   height: 100%;
@@ -455,6 +459,12 @@ body {
   border-radius: 5px;
 }
 
+.time,
+.event {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .hover-state:hover {
   border-radius: 50px;
   background-color: blue;
@@ -597,7 +607,7 @@ body {
 }
 
 .pb-7 {
-  padding-bottom: 3.5rem;
+  padding-bottom: 6.5rem;
 }
 
 .flex {
@@ -1010,6 +1020,11 @@ body {
   .not-found {
     width: 100%;
     font-size: 1.25rem;
+  }
+
+  .time,
+  .event {
+    font-size: 1.5rem;
   }
 }
 
